# ci-environment

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CiEnvironments.json  LICENSE  Makefile  README.md  ciDict.json  package-lock.json  update-testdata.rb  update_testdata.rb
.github/workflows/: codeql-java.yaml  codeql-javascript.yaml  codeql-python.yaml  codeql-ruby.yaml  prerelease-checks.yml  release-github.yml  release-go.yml  release-java.yml  release-javascript.yml  release-mvn.yaml  release-mvn.yml  release-pypi.yaml  release-python.yaml  release-python.yml  release-ruby.yml  release-rubygem.yaml  release-rubygem.yml  release.yml  test-codegen.yaml  test-go.yaml  test-go.yml  test-java.yaml  test-java.yml  test-javascript.yaml  test-javascript.yml  test-python.yaml  test-python.yml  test-ruby.yaml  test-ruby.yml
go/: Makefile  README.md  ci_environment.go  ci_environment_test.go  detect_environment.go  detect_environment_test.go  go.mod
java/: .gitignore  pom.xml
java/scripts/: check-jar.sh
java/src/codegen/java/: Generate.java
java/src/codegen/java/io/cucumber/cienvironment/: Generate.java
java/src/codegen/resources/io/cucumber/cienvironment/templates/: ci-environments.java.ftl
java/src/codegen/resources/templates/: ci-environments.java.ftl
java/src/main/groovy/io/cucumber/cienvironment/: CiEnvironments.groovy  CiEnvironments.gsp
java/src/main/groovy/io/cucumber/createmeta/: CiEnvironments.groovy  CiEnvironments.gsp  CiServers.groovy  CiServers.gsp
java/src/main/java/: module-info.java
java/src/main/java/io/cucumber/cienvironment/: CiEnvironment.java  CiEnvironmentImpl.java  DetectCiEnvironment.java  GithubEventParser.java  Json.java  RemoveUserInfo.java  VariableExpression.java  package-info.java
java/src/main/java/io/cucumber/createmeta/: CiEnvironment.java  CiEnvironmentImpl.java  CiTemplate.java  CodeGenerator.java  CreateMeta.java  DetectCiEnvironment.java  VariableExpression.java
java/src/main/resources/io/cucumber/createmeta/: ciDict.json
java/src/test/java/io/cucumber/: CiEnvironmentExample.java
java/src/test/java/io/cucumber/cienvironment/: CiEnvironmentExample.java  CiEnvironmentImplTest.java  DetectCiEnvironmentTest.java  GitHubPullRequestIntegrationTest.java  Jackson.java  RemoveUserInfoFromUrlTest.java  RemoveUserInfoTest.java  VariableExpressionTest.java
java/src/test/java/io/cucumber/createmeta/: CiEnvironmentExample.java  DetectCiEnvironmentTest.java  RemoveUserInfoFromUrlTest.java
java/src/test/java/io/cucumber/createmeta/acceptance/: CreateMetaTest.java
javascript/: .eslintrc.json  .gitignore  .mocharc.json  .prettierrc.json  CiEnvironments.ts.header  Makefile  biome.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.build-cjs.json  tsconfig.build-esm.json  tsconfig.build.json  tsconfig.json
javascript/src/: .gitignore  CiEnvironments.ts  ciDict.ts  createMeta.ts  detectCiEnvironment.ts  evaluateVariableExpression.ts  index.ts  printMeta.ts  types.ts
javascript/test/: acceptanceTest.ts  createMetaTest.ts  evaluateVariableExpressionTest.ts  gitHubPullRequestIntegrationTest.ts  removeUserInfoFromUrlTest.ts
javascript/test/acceptance/: createMetaTest.ts
python/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
python/src/ci_environment/: CiEnvironments.json  __init__.py  ci_environment.py  variable_expression.py
python/tests/: test_detect_ci_environment.py  test_variable_expression.py
ruby/: .gitignore  .rspec  .rubocop.yml  .rubocop_todo.yml  Gemfile  Makefile  Rakefile  cucumber-ci-environment.gemspec  cucumber-create-meta.gemspec
ruby/lib/cucumber/: .gitignore  ci_environment.rb  create_meta.rb  variable_expression.rb
ruby/lib/cucumber/ci_environment/: .gitignore  CiEnvironments.json  variable_expression.rb
ruby/rake/: copy_ci_dict.rb  spec_warning.rb
ruby/spec/: spec_helper.rb
ruby/spec/acceptance/: create_meta_spec.rb
ruby/spec/cucumber/: ci_environment_spec.rb  variable_expression_spec.rb
ruby/spec/cucumber/ci_environment/: ci_environment_spec.rb  detect_ci_environment_spec.rb  evaluate_variable_expression_spec.rb  github_pull_request_integration_spec.rb  remove_user_info_from_url_spec.rb  remove_userinfo_from_url_spec.rb  variable_expression_evaluate_spec.rb
scripts/: fail-if-dirty
testdata/: GitHubActions.txt  GitHubActions.txt.json  GitHubActionsNonPullRequest.txt  GitHubActionsNonPullRequest.txt.json  GitHubActionsPullRequest.txt  GitHubActionsPullRequest.txt.json  GitHubActionsPullRequestSynchronize.txt.json  GitHubActionsTagPipeline.txt.json  GitLab.txt  GoCD.txt  JetBrainsSpace.txt  NoGit.txt  update_testdata.rb
testdata/src/: AzurePipelines.txt.json  Bamboo.txt.json  Bitrise.txt.json  Buddy.txt.json  CircleCI.txt.json  CodeFresh.txt.json  CodeShip.txt.json  GitHubActions.txt  GitHubActions.txt.json  GitHubActionsPullRequestOpened.txt  GitHubActionsPullRequestOpened.txt.json  GitHubActionsPullRequestSynchronize.txt  GitHubActionsPullRequestSynchronize.txt.json  GitHubActionsTagPushed.txt  GitHubActionsTagPushed.txt.json  GitLab.txt.json  GitLabTagPushed.txt  GitLabTagPushed.txt.json  GoCD.txt.json  Jenkins.txt.json  JetBrainsSpace.txt  JetBrainsSpace.txt.json  NoGit.txt.json  NoGitRemote.txt  NoGitRemote.txt.json  NoGitRevision.txt  Semaphore.txt.json  TravisCI.txt.json  Wercker.txt.json
testdata/src/_github_workflow/: opened_event.json  synchronize_event.json
