[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Cucumber Limited", email = "cukes@googlegroups.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "importlib_resources",
  "python-dotenv"
]
description = "This library detects the CI environment based on environment variables defined by CI servers."
dynamic = [
  "optional-dependencies"
]
license = {text = "MIT"}
maintainers = [
  {name = "Konstantin Goloveshko", email = "kostya.goloveshko@gmail.com"}
]
name = "ci-environment"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
urls = {Repository = "https://github.com/cucumber/ci-environment"}
version = "11.0.0"

[project.entry-points]

[project.scripts]

[tool.mypy]
files = "src/ci_environment/**/*.py"
install_types = true
non_interactive = true
plugins = [
  "pydantic.mypy"
]
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
]

[tool.ruff.lint]
extend-select = [
  "I",
  "UP"
]
