[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.0,<0.10.0"]

[project]
authors = [
  {name = "Cucumber Limited", email = "cukes@googlegroups.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "importlib_resources",
  "python-dotenv"
]
description = "This library detects the CI environment based on environment variables defined by CI servers."
keywords = ["cucumber", "ci"]
license = "MIT"
license-files = [
  "LICENSE"
]
maintainers = [
  {name = "Konstantin Goloveshko", email = "kostya.goloveshko@gmail.com"}
]
name = "ci-environment"
readme = "README.md"
requires-python = ">=3.8"
version = "11.0.0"

[project.urls]
Homepage = "https://github.com/cucumber/ci-environment"
Repository = "https://github.com/cucumber/ci-environment"
Download = "https://pypi.org/project/ci-environment/"
Issues = "https://github.com/cucumber/ci-environment/issues"
Changelog = "https://github.com/cucumber/ci-environment/releases"

[tool.mypy]
files = "src/ci_environment/**/*.py"
install_types = true
non_interactive = true
plugins = [
  "pydantic.mypy"
]
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
]

[tool.ruff.lint]
extend-select = [
  "I",
  "UP"
]
